k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo
  namespace: devops-demo
  labels:
    app: devops-demo
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8080"
spec:
  type: ClusterIP
  selector:
    app: devops-demo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-nodeport
  namespace: devops-demo
  labels:
    app: devops-demo
spec:
  type: NodePort
  selector:
    app: devops-demo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
